# onchainsage

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  turbo.json  updated_account.json
.github/workflows/: backend.yml  blockchain.yml  data-processing.yml  frontend.yml
apps/backend/: .env.development.example  .env.production.example  README.md  jest.config.ts  lint-results.json  package-lock.json  package.json
apps/backend/config/: flags.json
apps/backend/src/: app.controller.ts  app.module.ts  app.service.ts  data-source.ts  main.ts
apps/backend/test/: rate-limit.e2e-spec.ts  (+1 more)
apps/blockchain/: Scarb.toml  contract_abi.json  extract-abi.js  extract_abi.py
apps/data-processing/: .gitignore  README.md  env.example  example_usage.py  main.py  normalization.py  pytorch_sentiment.py  requirements.txt  sentiment.py  sentiment_analysis.py  setup.py  signal_aggregator.py  signal_pipeline.py  storage.py  test_sentiment.py  test_storage.py  x-crypto.ipynb  x_crypto.py
apps/data-processing/tensorflow_sentimental_analysis/: predict.py  pyproject.toml  sentiment_dataset.csv  text_vectorizer.pkl  tf_sentiment.py  web3_tweets_1210.csv  x-crypto-tweets-sentiment-analysis.ipynb
apps/dojo/: .env.testnet  .scarbfmt.toml  README.md  Scarb.toml  dojo_dev.toml  dojo_release.toml  snfoundry.toml  torii_dev.toml
apps/frontend/: package-lock.json  package.json  tailwind.config.ts
apps/x_scraper/: main.py
data_processing/: test_sentiment.py
frontend/: README.md
src/migrations/: 1742692905537-InsertMockSignals.ts
(+375 files in other folders)
