[project]
name = "tensorflow-sentimental-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "emoji",
    "nltk>=3.9.1",
    "ntscraper",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pickle",
    "re",
    "tensorflow>=2.19.0",
    "tqdm>=4.67.1",
    "transformers>=4.50.0",
]
